--- a/index.html
+++ b/index.html
@@ -2,8 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Discover your IP address in an instant! Get quick, accurate results using our IP checker tool."
+    />
+    <meta
+      name="keywords"
+      content="IP, IP address, check IP, find IP, IP tool"
+    />
+    <meta name="author" content="Bravinta Tech" />
+
+    <!-- Facebook Open Graph Tags -->
+    <meta
+      property="og:title"
+      content="What Is Your IP - Fast & Accurate IP Checker"
+    />
+    <meta
+      property="og:description"
+      content="Looking to find out your current IP address? Dive in and get accurate results with our reliable IP checker."
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.jsdelivr.net/gh/bravinta/CDN@main/bravinta/img/social_banner_whatismyip.jpg"
+    />
+    <meta property="og:url" content="https://myip.bravinta.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Discover Your IP in a Blink" />
+    <meta
+      name="twitter:description"
+      content="Your one-stop solution for IP address checking. Fast, reliable, and accurate. Try now!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://cdn.jsdelivr.net/gh/bravinta/CDN@main/bravinta/img/social_banner_whatismyip.jpg"
+    />
+
+    <!-- Start Favicon Themed -->
+
+    <link
+      rel="icon"
+      href="https://cdn.jsdelivr.net/gh/Bravinta/CDN@main/bravinta/img/Logo-Negro--100x100.webp"
+      media="(prefers-color-scheme:no-preference)"
+    />
+    <link
+      rel="icon"
+      href="https://cdn.jsdelivr.net/gh/Bravinta/CDN@main/bravinta/img/Logo-Blanco--100x100.webp"
+      media="(prefers-color-scheme:dark)"
+    />
+    <link
+      rel="icon"
+      href="https://cdn.jsdelivr.net/gh/Bravinta/CDN@main/bravinta/img/Logo-Negro--100x100.webp"
+      media="(prefers-color-scheme:light)"
+    />
+
+    <!-- End Favicon Themed -->
 
     <!-- Start Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
